--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
         "typescript": "^5.2.2",
         "vite": "^6.2.0",
         "vue": "^3.5.13",
+        "vue-cookies": "^1.8.6",
         "vue-router": "^4.5.0",
         "ziggy-js": "^2.4.2"
     },
