--- a/package.json
+++ b/package.json
@@ -14,8 +14,9 @@
         "@types/lodash": "^4.17.16",
         "@types/node": "^22.13.5",
         "@vue/eslint-config-typescript": "^14.3.0",
-        "eslint": "^9.17.0",
+        "eslint": "^9.26.0",
         "eslint-config-prettier": "^10.0.1",
+        "eslint-plugin-unused-imports": "^4.1.4",
         "eslint-plugin-vue": "^9.32.0",
         "prettier": "^3.4.2",
         "prettier-plugin-organize-imports": "^4.1.0",
